# mvp-kg-alignment

./: OLLAMA_SETUP.md  calculate_matrics.ipynb  entity_alignment_evaluation_results.json  entity_alignment_evaluator.py  entity_name_id_tuples.csv  kg-alignment.ipynb  multi-agent-architecture.py  pyproject.toml  run_evaluation.py  start_ollama_servers.py
aligned_enitites/: building_places_batch_1_aligned.csv  creative_work_batch_1_aligned.csv  creative_work_batch_2_aligned.csv  entity_alignment.csv  event_batch_1_aligned.csv  person_batch_1_aligned.csv  person_batch_2_aligned.csv  person_batch_3_alignment.csv  person_batch_4_aligned.csv  place_batch_1_aligned.csv  place_batch_2_aligned.csv  uncertain_batch_1_aligned.csv  uncertain_batch_2_aligned.csv
categories/: Person_batch_1.csv  Person_batch_2.csv  Person_batch_3.csv  Person_batch_4.csv  buildings_places_batch_1.csv  creative_work_batch_1.csv  creative_work_batch_2.csv  event_batch_1.csv  place_batch_1.csv  place_batch_2.csv  uncertain_batch_1.csv  uncertain_batch_2.csv
categorization_batches/: Person_batch_1.csv  Person_batch_10.csv  Person_batch_11.csv  Person_batch_12.csv  Person_batch_13.csv  Person_batch_14.csv  Person_batch_15.csv  Person_batch_16.csv  Person_batch_17.csv  Person_batch_18.csv  Person_batch_19.csv  Person_batch_2.csv  Person_batch_20.csv  Person_batch_21.csv  Person_batch_22.csv  Person_batch_23.csv  Person_batch_24.csv  Person_batch_25.csv  Person_batch_26.csv  Person_batch_27.csv  Person_batch_28.csv  Person_batch_29.csv  Person_batch_3.csv  Person_batch_30.csv  Person_batch_31.csv  Person_batch_32.csv  Person_batch_33.csv  Person_batch_34.csv  Person_batch_35.csv  Person_batch_36.csv  Person_batch_37.csv  Person_batch_38.csv  Person_batch_39.csv  Person_batch_4.csv  Person_batch_40.csv  Person_batch_41.csv  Person_batch_42.csv  Person_batch_43.csv  Person_batch_44.csv  Person_batch_45.csv  (+187 more)
data/DBP15K/torch_geometric_cache/raw/en_fr/: dev.examples.20  test.ref  train.cand_list.20  train.examples.20
data/DBP15K/torch_geometric_cache/raw/en_ja/: test.ref  (+3 more)
mvp_kg_alignment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
processed_data/: batch_1.csv  categorised_entities_by_gemma_temp_50.csv  creative_work_specialized_output.csv  entity_name_id_category.csv  entity_names_id.csv
(+14 files in other folders)
